welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:18: error: type mismatch;
 found   : Unit
 required: Int
    if (a>20 | a<10) {
    ^max1020:17: error: type mismatch;
 found   : Unit
 required: Int
  if (b>20 & b<10) {
  ^